// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CVC verification card renders correctly when CVC check is disabled 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-6>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-6>* {
  min-width: 0;
}

.emotion-8 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-12 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-12 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="cvc-verification-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            CVC Verification
          </p>
        </div>
        <div
          class="wcpay-inline-notice wcpay-inline-warning-notice fraud-protection-rule-card-notice fraud-protection-rule-card-notice-warning components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            <div
              class="components-flex emotion-6 emotion-1"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item wcpay-inline-notice__icon wcpay-inline-warning-notice__icon emotion-8 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <svg
                  class="gridicon gridicons-notice-outline"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content emotion-8 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                This filter is disabled, and can not be modified.
              </div>
            </div>
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            Because the card security code appears only on the card and not on receipts or statements, the card security code provides some assurance that the physical card is in the possession of the buyer.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-12 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-12 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`CVC verification card renders correctly when CVC check is enabled 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-6>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-6>* {
  min-width: 0;
}

.emotion-8 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-12 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-12 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="cvc-verification-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            CVC Verification
          </p>
        </div>
        <div
          class="wcpay-inline-notice wcpay-inline-warning-notice fraud-protection-rule-card-notice fraud-protection-rule-card-notice-warning components-notice is-warning"
        >
          <div
            class="components-notice__content"
          >
            <div
              class="components-flex emotion-6 emotion-1"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item wcpay-inline-notice__icon wcpay-inline-warning-notice__icon emotion-8 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <svg
                  class="gridicon gridicons-notice-outline"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content emotion-8 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                For security, this filter is enabled and cannot be modified. Payments failing CVC verification will be blocked. 
                <a
                  data-link-type="external"
                  href="https://woocommerce.com/document/woopayments/fraud-and-disputes/fraud-protection/#advanced-configuration"
                  target="_blank"
                >
                  Learn more
                </a>
              </div>
            </div>
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            Because the card security code appears only on the card and not on receipts or statements, the card security code provides some assurance that the physical card is in the possession of the buyer.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-12 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-12 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;
